TestRepo2/src/objects/Asset_Brand_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Assigned__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diageo_Asset__c</fullName>
        <label>Diageo Asset</label>
        <referenceTo>Diageo_Asset__c</referenceTo>
        <relationshipLabel>Asset Brand Mappings</relationshipLabel>
        <relationshipName>Asset_Brand_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe_Brand__c</fullName>
        <label>Recipe Brand</label>
        <referenceTo>Diageo_Brand__c</referenceTo>
        <relationshipLabel>Asset Brand Mappings</relationshipLabel>
        <relationshipName>Asset_Brand_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Asset Brand Mapping</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Asset Brand List ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Brand Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>